added team member emails

--- a/details.html
+++ b/details.html
@@ -60,7 +60,13 @@
     </main>
 
     <footer>
-        <p>Contact me: <a href="mailto:berlinger.b@northeastern.edu">berlinger.b@northeastern.edu</a></p>
+        <p>Contact the team:</p>
+        <ul>
+            <li>Blythe Berlinger: <a href="mailto:berlinger.b@northeastern.edu">berlinger.b@northeastern.edu</a></li>
+            <li>Luke Brothers: <a href="mailto:brothers.l@northeastern.edu">brothers.l@northeastern.edu</a></li>
+            <li>Annabelle Peak: <a href="mailto:peak.a@northeastern.edu">peak.a@northeastern.edu</a></li>
+            <li>Nathaniel Yee: <a href="mailto:yee.n@northeastern.edu">yee.n@northeastern.edu</a></li>
+        </ul>
     </footer>
 </body>
 </html>
