edited website and .html files to include static charts with descriptions

--- a/dynamic_charts.html
+++ b/dynamic_charts.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Credit Risk Analysis Details</title>
+    <title>Credit Risk Analysis Dynamic Plots</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header>
-        <h1>Credit Risk Analysis Details</h1>
+        <h1>Credit Risk Analysis Dynamic Plots</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="details.html">Details</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="static_charts.html">Static Charts</a></li>
+                <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section>
-            <h2>Key Insights</h2>
+            <h2>About</h2>
 
             <p> In this section, we dive deeper into our analysis of credit risk, focusing on the relationships between key factors 
                 such as income levels, loan amounts, and credit history. Our findings suggest a strong correlation between financial 
