--- a/home.html
+++ b/home.html
@@ -13,8 +13,10 @@
         <h1>Credit Risk Prediction Project</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="details.html">Details</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="static_charts.html">Static Charts</a></li>
+                <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -28,7 +30,6 @@
                 with variables such as income, loan amount, and credit history, we aim to model repayment likelihood and identify trends
                 that can assist in managing credit risk effectively. 
              </p>
-            <img src="images/greenhouse02.JPG" alt="Profile Image" width="300">
         </section>
     </main>
 
