--- a/dynamic_charts.html
+++ b/dynamic_charts.html
@@ -13,7 +13,7 @@
         <h1>Credit Risk Analysis Dynamic Plots</h1>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="static_charts.html">Static Charts</a></li>
                 <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
             </ul>
