--- a/static_charts.html
+++ b/static_charts.html
@@ -13,7 +13,7 @@
         <h1>Static Visualizations</h1>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="static_charts.html">Static Charts</a></li>
                 <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
             </ul>
@@ -23,23 +23,23 @@
     <main>
         <section>
             <h2>Loan Grade Counts</h2>
-            <img src="images/loan_grade_counts.png" alt="Bar chart showing loan grade counts" width="600">
+            <img src="static_plots/loan_grade_counts.png" alt="Bar chart showing loan grade counts" width="600">
             <p>This bar chart highlights the distribution of loans across different grades (A-G). Grades A and B dominate, suggesting better financial risk profiles.</p>
 
             <h2>Correlation Heatmap</h2>
-            <img src="images/correlation_heatmap.png" alt="Correlation heatmap between financial variables" width="600">
+            <img src="static_plots/correlation_heatmap.png" alt="Correlation heatmap between financial variables" width="600">
             <p>The heatmap illustrates the relationships between key variables like income, loan amount, and default loan status. High correlation is observed between credit history length and age.</p>
 
             <h2>Interest Rate vs Income</h2>
-            <img src="images/interest_rate_vs_income.png" alt="Scatter plot of interest rate vs income" width="600">
+            <img src="static_plots/interest_rate_vs_income.png" alt="Scatter plot of interest rate vs income" width="600">
             <p>This scatter plot shows the relationship between loan interest rate and borrower income, segmented by loan default status.</p>
 
             <h2>Loan Status by Loan Grade</h2>
-            <img src="images/loan_status_by_grade.png" alt="Bar plot of loan status by grade" width="600">
+            <img src="static_plots/loan_status_by_grade.png" alt="Bar plot of loan status by grade" width="600">
             <p>Default rates are higher for lower grades (D-G). Higher-grade loans (A-B) generally show lower default risks.</p>
 
             <h2>Interest Rate Boxplot by Loan Grade</h2>
-            <img src="images/interest_rate_by_grade.png" alt="Box plot of interest rate by loan grade and status" width="600">
+            <img src="static_plots/interest_rate_by_grade.png" alt="Box plot of interest rate by loan grade and status" width="600">
             <p>Boxplots demonstrate that lower-grade loans (i.e. F and G) have higher interest rates, with visible differences by default status.</p>
         </section>
     </main>
