--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DS4200 Final Project Credit Risk Prediction</title>
+    <title>DS4200 Final Project Credit Risk Analysis</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header>
-        <h1>Credit Risk Prediction Project</h1>
+        <h1>Credit Risk Analysis Project</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
