added d3 plot to website

--- a/static_charts.html
+++ b/static_charts.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="static_charts.html">Static Charts</a></li>
                 <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
+                <li><a href="scatter.html">D3 Scatter Plot</a></li>
             </ul>
         </nav>
     </header>
