--- a/dynamic_charts.html
+++ b/dynamic_charts.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
+    <script src="https://cdn.plot.ly/plotly-2.14.0.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+
 </head>
 <body>
     <header>
@@ -16,6 +19,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="static_charts.html">Static Charts</a></li>
                 <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
+                <li><a href="scatter.html">D3 Scatter Plot</a></li>
             </ul>
         </nav>
     </header>
