added nav to scatter.html

--- a/scatter.html
+++ b/scatter.html
@@ -7,8 +7,21 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
+    <header>
+        <h1>Static Visualizations</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="static_charts.html">Static Charts</a></li>
+                <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
+                <li><a href="scatter.html">D3 Scatter Plot</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Scatter Plot: Loan Percent Income vs Loan Interest Rate</h1>
     <svg width="800" height="600"></svg>
+
     <script>
         // Set the dimensions and margins of the graph
         const margin = { top: 50, right: 50, bottom: 50, left: 50 },
