integrated scatter.html

--- a/scatter.html
+++ b/scatter.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scatter Plot</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -19,8 +20,10 @@
         </nav>
     </header>
 
-    <h1>Scatter Plot: Loan Percent Income vs Loan Interest Rate</h1>
-    <svg width="800" height="600"></svg>
+    <main>
+        <h2>Scatter Plot: Loan Percent Income vs Loan Interest Rate</h2>
+        <svg width="800" height="600"></svg>
+    </main>
 
     <script>
         // Set the dimensions and margins of the graph
