integrating scatter.html

--- a/scatter.html
+++ b/scatter.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scatter Plot</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <title>Credit Risk Analysis - D3 Scatter Plot</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <header>
-        <h1>Static Visualizations</h1>
+        <h1>D3 Scatter Plot</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,9 +22,22 @@
     </header>
 
     <main>
-        <h2>Scatter Plot: Loan Percent Income vs Loan Interest Rate</h2>
-        <svg width="800" height="600"></svg>
+        <section>
+            <h2>Loan Percent Income vs Loan Interest Rate</h2>
+            <svg width="800" height="600"></svg>
+            <p>The scatter plot below explores the relationship between the percentage of income dedicated to loans and the corresponding loan interest rates.</p>
+        </section>
     </main>
+
+    <footer>
+        <p>Contact the team:</p>
+        <ul>
+            <li>Blythe Berlinger: <a href="mailto:berlinger.b@northeastern.edu">berlinger.b@northeastern.edu</a></li>
+            <li>Luke Brothers: <a href="mailto:brothers.l@northeastern.edu">brothers.l@northeastern.edu</a></li>
+            <li>Annabelle Peak: <a href="mailto:peak.a@northeastern.edu">peak.a@northeastern.edu</a></li>
+            <li>Nathaniel Yee: <a href="mailto:yee.n@northeastern.edu">yee.n@northeastern.edu</a></li>
+        </ul>
+    </footer>
 
     <script>
         // Set the dimensions and margins of the graph
