--- a/dynamic_charts.html
+++ b/dynamic_charts.html
@@ -29,13 +29,13 @@
             <h2>Dynamic Visualizations</h2>
             <p>Below are interactive charts for exploring credit risk relationships dynamically:</p>
             
-            <h3>Health and Income by Region</h3>
-            <iframe src="/ds4200_credit_default_prediction/dynamic_charts/health_income_charts.html" width="1000" height="800" frameborder="0"></iframe>
-            <p>This chart allows users to explore the relationship between age, income, and loan intent with an interactive range selection.</p>
+            <h3>Age and Loan Grade Filters</h3>
+            <iframe src="/ds4200_credit_default_prediction/dynamic_charts/age_loan_grade_filters.html" width="1000" height="800" frameborder="0"></iframe>
+            <p>This chart allows users to explore the relationship between age, loan-to-income ratio, and loan grade using dynamic filters.</p>
 
-            <h3>Health and Income by Region (Radio Filter)</h3>
-            <iframe src="/ds4200_credit_default_prediction/dynamic_charts/radio_filtered_charts.html" width="1000" height="800" frameborder="0"></iframe>
-            <p>Use the radio buttons to filter data by loan intent and observe its impact on the relationship between age and income.</p>
+            <h3>Loan Intent Filters</h3>
+            <iframe src="/ds4200_credit_default_prediction/dynamic_charts/loan_intent_filters.html" width="1000" height="800" frameborder="0"></iframe>
+            <p>Use the radio buttons to filter data by loan intent and observe its impact on the relationship between income and age.</p>
 
             <h3>Loan Grade Counts</h3>
             <iframe src="/ds4200_credit_default_prediction/dynamic_charts/loan_grade_chart.html" width="800" height="600" frameborder="0"></iframe>
