--- a/scatter.html
+++ b/scatter.html
@@ -25,7 +25,7 @@
         <section>
             <h2>Loan Percent Income vs Loan Interest Rate</h2>
             <svg width="800" height="600"></svg>
-            <p>The scatter plot below explores the relationship between the percentage of income dedicated to loans and the corresponding loan interest rates.</p>
+            <p>The scatter plot aboves explores the relationship between the percentage of income dedicated to loans and the corresponding loan interest rates.</p>
         </section>
     </main>
 
