--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
         <section>
             <h2>Project Goals and Motivation</h2>
             <p>
-                The goal of this project is to demonstrate proficiency in data visualization and analysis techniques by exploring a dataset 
-                of over 32,000 entries. By analyzing variables such as income, loan amount, and credit history, we aim to:
+                This project focuses on applying data visualization techniques and libraries learned in DS4200 to explore and analyze credit risk data. 
+                Through effective use of static, dynamic, and interactive visualizations, we aim to highlight the relationships between
+                demographic and financial factors and their impact on credit default risk. This approach emphasizes the importance of clear, 
+                insightful presentation in understanding complex datasets and communicating findings to diverse audiences.
             </p>
+
             <ul>
                 <li>Model repayment likelihood and predict credit default risk.</li>
                 <li>Identify trends that assist in managing credit risk effectively.</li>
@@ -51,42 +54,50 @@
                 The dataset includes over 32,000 observations with 12 variables, such as:
             </p>
             <ul>
-                <li><strong>Person Age:</strong> The age of the borrower.</li>
-                <li><strong>Loan Amount:</strong> The total amount borrowed.</li>
-                <li><strong>Person Income:</strong> The annual income of the borrower.</li>
-                <li><strong>Loan Intent:</strong> The purpose of the loan (e.g., debt consolidation, education).</li>
-                <li><strong>Loan Status:</strong> Whether the borrower defaulted or repaid.</li>
+                <li><strong>person_age:</strong> Age of the borrower.</li>
+                <li><strong>person_income:</strong> Annual income of the borrower.</li>
+                <li><strong>person_home_ownership:</strong> Type of home ownership (e.g., rent, own, mortgage).</li>
+                <li><strong>person_emp_length:</strong> Number of years the person has been employed.</li>
+                <li><strong>loan_intent:</strong> Purpose of the loan (e.g., education, debt consolidation).</li>
+                <li><strong>loan_grade:</strong> Loan quality grade (A-G, with A being the highest).</li>
+                <li><strong>loan_amnt:</strong> Loan amount requested by the borrower.</li>
+                <li><strong>loan_int_rate:</strong> Interest rate of the loan.</li>
+                <li><strong>loan_status:</strong> Whether the borrower defaulted (1) or paid off the loan (0).</li>
+                <li><strong>loan_percent_income:</strong> Percentage of the borrower’s income allocated to the loan.</li>
+                <li><strong>cb_person_default_on_file:</strong> Whether the borrower has a history of defaults (yes/no).</li>
+                <li><strong>cb_person_cred_hist_length:</strong> Length of the borrower’s credit history in years.</li>
             </ul>
             <p>Here’s a preview of the data:</p>
-            <pre>
-                <code>
-                Loan Grade   Loan Amount   Income     Loan Intent        Loan Status
-                A            10000         75000      Education          Paid Off
-                B            20000         60000      Debt Consolidation Default
-                C            15000         50000      Home Improvement   Paid Off
-                </code>
+           <pre>
+            <code>
+            person_age    person_income    person_home_ownership    person_emp_length    loan_intent      loan_grade    loan_amnt    loan_int_rate    loan_status    loan_percent_income    cb_person_default_on_file    cb_person_cred_hist_length
+                22            59000           RENT                     123.0                PERSONAL         D             35000        16.02            1              0.59                    Y                            3
+                21            9600            OWN                      5.0                  EDUCATION        B             1000         11.14            0              0.10                    N                            2
+                25            9600            MORTGAGE                 1.0                  MEDICAL          C             5500         12.87            1              0.57                    N                            3
+                23            65500           RENT                     4.0                  MEDICAL          C             35000        15.23            1              0.53                    N                            2
+            </code>
             </pre>
+
         </section>
 
         <section>
             <h2>Team Responsibilities</h2>
             <p>Each team member contributed to the project as follows:</p>
-            <ul>
-                <li><strong>Blythe Berlinger:</strong> Data analysis and preprocessing, visualization design.</li>
-                <li><strong>Luke Brothers:</strong> Interactive visualization development.</li>
-                <li><strong>Annabelle Peak:</strong> Static chart design and data storytelling.</li>
-                <li><strong>Nathaniel Yee:</strong> Dataset exploration and machine learning modeling.</li>
-            </ul>
+            
+            <li><strong>Blythe Berlinger:</strong> HTML, CSS, and general website structure, and analysis.</li>
+            <li><strong>Luke Brothers:</strong> Static visualizations development and analysis.</li>
+            <li><strong>Nathaniel Yee:</strong> Dynamic visualizations, interactive elements, and analysis.</li>
+            <li><strong>Annabelle Peak:</strong> D3 scatter plot implementation and analysis.</li>
+        </ul>
         </section>
 
         <section>
             <h2>Overview of Visualizations</h2>
-            <p>
-                Our project includes both static and dynamic visualizations to communicate findings effectively:
-            </p>
+            <p>Our visualizations are categorized as follows:</p>
             <ul>
-                <li><a href="static_charts.html">Static Charts:</a> Explore key trends and relationships in the data.</li>
-                <li><a href="dynamic_charts.html">Dynamic Charts:</a> Interact with the data to discover deeper insights.</li>
+                <li><a href="static_charts.html">Static Visualizations:</a> Analyze patterns in loan grades, default rates, and interest rates.</li>
+                <li><a href="dynamic_charts.html">Dynamic Visualizations:</a> Explore relationships using filters for loan grade, age, and income.</li>
+                <li><a href="scatter.html">D3 Scatter Plot:</a> Investigate the relationship between loan percent income and interest rates.</li>
             </ul>
         </section>
     </main>
