--- a/static_charts.html
+++ b/static_charts.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Static Visualizations</h1>
+        <h1>Credit Risk Analysis Static Plots</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
