more formatting stuff

--- a/dynamic_charts.html
+++ b/dynamic_charts.html
@@ -33,27 +33,28 @@
             <iframe src="/ds4200_credit_default_prediction/dynamic_charts/age_loan_grade_filters.html" width="1000" height="800" frameborder="0"></iframe>
             <p>
                 This chart allows users to explore the relationship between age, loan-to-income ratio, and loan grade. 
-                - Use the sliders to adjust the age range of the borrower.
-                - Select all or specific loan grades (A-G) using the radio buttons belows. 
-                - Observe how the distribution of points changes as you apply different filters to focus on specific demographic groups or financial behaviors.
+                Use the slider to adjust the age range of the borrower.
+                Select all or specific loan grades (A-G) using the radio buttons belows. 
+                Observe how the distribution of points changes as you apply different filters to focus on specific demographic groups or financial behaviors.
             </p>
 
             <h3>Loan Intent Filters</h3>
             <iframe src="/ds4200_credit_default_prediction/dynamic_charts/loan_intent_filters.html" width="1000" height="800" frameborder="0"></iframe>
             <p>
                 This visualization uses radio buttons to filter data by loan intent categories (e.g., Education, Debt Consolidation). 
-                - Click on the radio buttons to switch between different loan intents.
-                - Watch as the scatterplot updates to reflect only the selected category.
-                - Hover over individual points to view detailed information about each record, such as income or loan amount, and see how loan intent impacts the relationship between income and age.
+                Click on the radio buttons to switch between different loan intents.
+                Watch as the scatterplot updates to reflect only the selected category.
+                Hover over individual points to view detailed information about each record, such as income or loan amount, and see how loan intent impacts 
+                the relationship between income and age.
             </p>
 
             <h3>Loan Grade Counts</h3>
             <iframe src="/ds4200_credit_default_prediction/dynamic_charts/loan_grade_chart.html" width="800" height="600" frameborder="0"></iframe>
             <p>
                 This plot.ly bar chart shows the distribution of loan grade amounts, providing insights into financial risk profiles by grade.
-                - Hover over each bar to view the exact count of loans for each grade (A-G).
-                - Use the interactive bar in the top right to zoom in and out, download the plot, and see how certain grades affects the overall distribution.
-                - Look into specific portions of the chart by clicking or hovering to examine the data in more detail.
+                Hover over each bar to view the exact count of loans for each grade (A-G).
+                Use the interactive bar in the top right to zoom in and out, download the plot, and see how certain grades affects the overall distribution.
+                Look into specific portions of the chart by clicking or hovering to examine the data in more detail.
             </p>
         
         </section>
