--- a/index.html
+++ b/index.html
@@ -68,83 +68,7 @@
                 <li><strong>cb_person_cred_hist_length:</strong> Length of the borrower’s credit history in years.</li>
             </ul>
             <p>Here’s a preview of the data:</p>
-                <table>
-                <thead>
-                    <tr>
-                    <th>person_age</th>
-                    <th>person_income</th>
-                    <th>person_home_ownership</th>
-                    <th>person_emp_length</th>
-                    <th>loan_intent</th>
-                    <th>loan_grade</th>
-                    <th>loan_amnt</th>
-                    <th>loan_int_rate</th>
-                    <th>loan_status</th>
-                    <th>loan_percent_income</th>
-                    <th>cb_person_default_on_file</th>
-                    <th>cb_person_cred_hist_length</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>22</td>
-                    <td>59000</td>
-                    <td>RENT</td>
-                    <td>123.0</td>
-                    <td>PERSONAL</td>
-                    <td>D</td>
-                    <td>35000</td>
-                    <td>16.02</td>
-                    <td>1</td>
-                    <td>0.59</td>
-                    <td>Y</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>21</td>
-                    <td>9600</td>
-                    <td>OWN</td>
-                    <td>5.0</td>
-                    <td>EDUCATION</td>
-                    <td>B</td>
-                    <td>1000</td>
-                    <td>11.14</td>
-                    <td>0</td>
-                    <td>0.10</td>
-                    <td>N</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>25</td>
-                    <td>9600</td>
-                    <td>MORTGAGE</td>
-                    <td>1.0</td>
-                    <td>MEDICAL</td>
-                    <td>C</td>
-                    <td>5500</td>
-                    <td>12.87</td>
-                    <td>1</td>
-                    <td>0.57</td>
-                    <td>N</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>23</td>
-                    <td>65500</td>
-                    <td>RENT</td>
-                    <td>4.0</td>
-                    <td>MEDICAL</td>
-                    <td>C</td>
-                    <td>35000</td>
-                    <td>15.23</td>
-                    <td>1</td>
-                    <td>0.53</td>
-                    <td>N</td>
-                    <td>2</td>
-                </tr>
-                </tbody>
-                </table>
-
+            <img src="images/data.png" alt="Dataset preview showing person age, income, home ownership, employment length, loan intent, loan grade, and more" style="max-width: 100%; height: auto;">
         </section>
 
         <section>
