--- a/index.html
+++ b/index.html
@@ -70,7 +70,44 @@
             <p>Here’s a preview of the data:</p>
             <img src="images/data.png" alt="Dataset preview showing person age, income, home ownership, employment length, loan intent, loan grade, and more" style="max-width: 100%; height: auto;">
         </section>
-
+        <section>
+            <h2>Conclusion and Summary</h2>
+            <p>The Conclusion From Our Analysis is as Follows:</p>
+            <p>
+                This project focuses on applying data visualization techniques and libraries learned in DS4200 to explore and analyze credit risk data. 
+                Through effective use of static, dynamic, and interactive visualizations, we aim to highlight the relationships between
+                demographic and financial factors and their impact on credit default risk. This approach emphasizes the importance of clear, 
+                insightful presentation in understanding complex datasets and communicating findings to diverse audiences.
+            </p>
+            <p>
+                <strong>Summary of Findings:</strong>
+            </p>
+            <p>
+                <strong>Descriptive Statistics:</strong><br>
+                <strong>Person Age:</strong> The average age of individuals in the dataset is approximately 27.73 years, with a standard deviation of 6.31 years.
+                The age range spans from 20 to 144 years, with the majority of individuals falling between 23 and 30 years.<br>
+                <strong>Person Income:</strong> The average income is around $66,649, with a significant standard deviation of $62,356, indicating a wide range of income levels.
+                The income ranges from $4,000 to $6,000,000, with the interquartile range (IQR) between $39,480 and $80,000.<br>
+                <strong>Loan Amount:</strong> The average loan amount is approximately $9,656, with a standard deviation of $6,330.
+                Loan amounts range from $500 to $35,000, with the IQR between $5,000 and $12,500.<br>
+                <strong>Loan Interest Rate:</strong> The average interest rate is about 11.04%, with a standard deviation of 3.23%.
+                Interest rates range from 5.42% to 23.22%, with the IQR between 7.90% and 13.48%.<br>
+                <strong>Loan Status:</strong> The dataset includes both fully paid and defaulted loans, with a mean loan status of 0.2166, indicating that approximately 21.66% of the loans are defaulted.<br>
+                <strong>Loan Percent Income:</strong> On average, loans constitute about 16.95% of an individual's income, with a standard deviation of 10.64%.
+                The loan percent income ranges from 0% to 83%, with the IQR between 9% and 23%.
+            </p>
+            <p>
+                <strong>Conclusion:</strong><br>
+                The analysis of the dataset reveals several key insights:
+                <ul>
+                    <li><strong>Age and Income Distribution:</strong> The majority of loan applicants are young adults, primarily between the ages of 20 and 40. There is a wide range of income levels among the applicants, with a significant number of individuals earning between $40,000 and $80,000 annually.</li>
+                    <li><strong>Loan Amount and Interest Rates:</strong> The average loan amount is around $9,656, with higher loan amounts being more common among certain age groups. Interest rates vary significantly, with an average rate of 11.04%, indicating that loan terms can differ widely based on various factors.</li>
+                    <li><strong>Loan Intent:</strong> Different loan intents show varying distributions of loan amounts and income levels. Understanding the intent behind loans can provide valuable insights into the financial behavior and needs of different age groups.</li>
+                    <li><strong>Loan Default Rates:</strong> Approximately 21.66% of the loans in the dataset are defaulted, highlighting the importance of assessing credit risk and borrower reliability.</li>
+                </ul>
+                Overall, the visualizations and statistical analysis provide a comprehensive overview of the loan data, helping to identify trends and patterns that can inform financial decision-making and risk assessment.
+            </p>
+        </section>
         <section>
             <h2>Team Responsibilities</h2>
             <p>Each team member contributed to the project as follows:</p>
