--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <li><strong>Age and Income Distribution:</strong> The majority of loan applicants are young adults, primarily between the ages of 20 and 40. There is a wide range of income levels among the applicants, with a significant number of individuals earning between $40,000 and $80,000 annually.</li>
                     <li><strong>Loan Amount and Interest Rates:</strong> The average loan amount is around $9,656, with higher loan amounts being more common among certain age groups. Interest rates vary significantly, with an average rate of 11.04%, indicating that loan terms can differ widely based on various factors.</li>
                     <li><strong>Loan Intent:</strong> Different loan intents show varying distributions of loan amounts and income levels. Understanding the intent behind loans can provide valuable insights into the financial behavior and needs of different age groups.</li>
-                    <li><strong>Loan Default Rates:</strong> Approximately 21.66% of the loans in the dataset are defaulted, highlighting the importance of assessing credit risk and borrower reliability.</li>
+                    <li><strong>Loan Default Rates:</strong> Approximately 21.66% of the loans in the dataset are defaulted, highlighting the importance of assessing credit risk and borrower reliability. With the age of credit, age of person, and grade being the most indicative of whether or not they would default on the loan.</li>
                 </ul>
                 Overall, the visualizations and statistical analysis provide a comprehensive overview of the loan data, helping to identify trends and patterns that can inform financial decision-making and risk assessment.
             </p>
