more rewording of titles

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Static Charts</a></li>
-                <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
+                <li><a href="static_charts.html">Key Static Visuals</a></li>
+                <li><a href="dynamic_charts.html">Interactive Exploration</a></li>
                 <li><a href="scatter.html">D3 Scatter Plot</a></li>
                 
             </ul>
@@ -121,7 +121,7 @@
                 For full details, visit the dataset source on Kaggle: 
                 <a href="https://www.kaggle.com/datasets/laotse/credit-risk-dataset" target="_blank">Credit Risk Dataset</a>.
             </p>
-            
+
         </section>
         <section>
             <h2>Conclusion and Summary</h2>
@@ -177,7 +177,7 @@
             <p>Our visualizations are categorized as follows:</p>
             <ul>
                 <li><a href="static_charts.html">Static Visualizations:</a> Analyze patterns in loan grades, default rates, and interest rates.</li>
-                <li><a href="dynamic_charts.html">Dynamic Visualizations:</a> Explore relationships using filters for loan grade, age, and income.</li>
+                <li><a href="dynamic_charts.html">Interactive Credi Risk Visualizations:</a> Explore relationships using filters for loan grade, age, and income.</li>
                 <li><a href="scatter.html">D3 Scatter Plot:</a> Investigate the relationship between loan percent income and interest rates.</li>
             </ul>
         </section>
