--- a/static_charts.html
+++ b/static_charts.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Credit Risk Analysis Static Plots</h1>
+        <h1>Credit Risk Analysis: Static Visuals on Loan Grades, Loan Status, and Interest Rates</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
