--- a/dynamic_charts.html
+++ b/dynamic_charts.html
@@ -17,9 +17,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Static Charts</a></li>
-                <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
-                <li><a href="scatter.html">D3 Scatter Plot</a></li>
+                <li><a href="static_charts.html">Exploring Credit Trends: Loan Grades, Risks, and Correlations</a></li>
+                <li><a href="dynamic_charts.html">Interactive Visualizations: Credit Risk and Borrower Behavior</a></li>
+                <li><a href="scatter.html">Scatter Plot: Loan Percent Income vs Loan Interest Rate </a></li>
             </ul>
         </nav>
     </header>
