--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Key Static Visuals</a></li>
-                <li><a href="dynamic_charts.html">Interactive Exploration</a></li>
-                <li><a href="scatter.html">D3 Scatter Plot</a></li>
+                <li><a href="static_charts.html">Exploring Credit Trends: Loan Grades, Risks, and Correlations</a></li>
+                <li><a href="dynamic_charts.html">Interactive Visualizations: Credit Risk and Borrower Behavior</a></li>
+                <li><a href="scatter.html">Scatter Plot: Loan Percent Income vs Loan Interest Rate </a></li>
                 
             </ul>
         </nav>
