--- a/static_charts.html
+++ b/static_charts.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-        <h1>Credit Risk Analysis: Static Visuals on Loan Grades, Loan Status, and Interest Rates</h1>
+        <h1>Exploring Credit Trends: Loan Grades, Risks, and Correlations</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Static Charts</a></li>
-                <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
-                <li><a href="scatter.html">D3 Scatter Plot</a></li>
+                <li><a href="static_charts.html">Exploring Credit Trends: Loan Grades, Risks, and Correlations</a></li>
+                <li><a href="dynamic_charts.html">Interactive Visualizations: Credit Risk and Borrower Behavior</a></li>
+                <li><a href="scatter.html">Scatter Plot: Loan Percent Income vs Loan Interest Rate </a></li>
             </ul>
         </nav>
     </header>
