--- a/static_charts.html
+++ b/static_charts.html
@@ -27,7 +27,7 @@
             <img src="static_plots/loan_grade_counts.png" alt="Bar chart showing loan grade counts" width="600">
             <p>This bar chart highlights the distribution of loans across different grades (A-G). Grades A and B dominate, suggesting better financial risk profiles.
 
-                ADD FURTHER ANALYSIS
+                ADD FURTHER ANALYSIS test
 
                 <br>To further explore the impact of grades on risk, we analyze loan default rates by grade in the next visualization.
             </p>
